# Tetris

./: .gitattributes  CMakeLists.txt  README.md
cmake/: Findglfw3.cmake
include/glad/: glad.h
src/: glad.c  main.cpp
